2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.

2005-11-24  Alan Coopersmith  <alan.coopersmith@sun.com>

	* Makefile.am: 
	Add makeg script & man page.

2005-11-12  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	* Makefile.am:
	Substitute variables in man pages
	Set CPP_PROGRAM to path to cpp

2005-11-09  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC2 release.